Ajuste de alguns caracteres e do encoding
\'\i trocado por \'{\i}
\c c trocado por \c{c}
Enconding ajustado para UTF-8

--- a/referencias.bib
+++ b/referencias.bib
@@ -1,5 +1,5 @@
 % This file was created with JabRef 2.10b2.
-% Encoding: ISO8859_1
+% Encoding: UTF-8
 
 
 @String { abntex.doc.header = {$Header: /home/cvsroot/abntex/texmf/bibtex/bib/abntex/abntex-doc.bib,v 1.1 2003/03/21 18:28:12 gweber Exp $} }
@@ -17,7 +17,7 @@
 }
 
 @Manual{abntex2modelo-artigo,
-  Title                    = {Modelo Can{\^o}nico de Artigo cient{\'\i}fico com abnTeX2},
+  Title                    = {Modelo Can{\^o}nico de Artigo cient{\'i}fico com abnTeX2},
   Author                   = {abnTeX2},
   Organization             = {Equipe abnTeX2},
   Year                     = {2013},
@@ -68,7 +68,7 @@
 }
 
 @Manual{abntex2modelo-relatorio,
-  Title                    = {Modelo Can{\^o}nico de Relat{\'o}rio T{\'e}cnico e/ou Cient{\'\i}fico com abnTeX2},
+  Title                    = {Modelo Can{\^o}nico de Relat{\'o}rio T{\'e}cnico e/ou Cient{\'i}fico com abnTeX2},
   Author                   = {abnTeX2},
   Organization             = {Equipe abnTeX2},
   Year                     = {2013},
@@ -81,7 +81,7 @@
 }
 
 @Manual{abntex2cite,
-  Title                    = {O pacote abntex2cite: Estilos bibliogr{\'a}ficos compat{\'\i}veis com a ABNT NBR 6023},
+  Title                    = {O pacote abntex2cite: Estilos bibliogr{\'a}ficos compat{\'i}veis com a ABNT NBR 6023},
   Author                   = {abnTeX2 and Lauro C{\'e}sar Araujo},
   Organization             = {Equipe abnTeX2},
   Year                     = {2013},
@@ -94,7 +94,7 @@
 }
 
 @Manual{abntex2cite-alf,
-  Title                    = {O pacote abntex2cite: t{\'o}picos espec{\'\i}ficos da ABNT NBR 10520:2002 e o estilo bibliogr{\'a}fico alfab{\'e}tico (sistema autor-data},
+  Title                    = {O pacote abntex2cite: t{\'o}picos espec{\'i}ficos da ABNT NBR 10520:2002 e o estilo bibliogr{\'a}fico alfab{\'e}tico (sistema autor-data},
   Author                   = {abnTeX2 and Lauro C{\'e}sar Araujo},
   Organization             = {Equipe abnTeX2},
   Year                     = {2013},
@@ -107,7 +107,7 @@
 }
 
 @Manual{abntex2classe,
-  Title                    = {A classe abntex2: Modelo can{\^o}nico de trabalhos acad{\^e}micos brasileiros compat{\'\i}vel com as normas ABNT NBR 14724:2011, ABNT NBR 6024:2012 e outras},
+  Title                    = {A classe abntex2: Modelo can{\^o}nico de trabalhos acad{\^e}micos brasileiros compat{\'i}vel com as normas ABNT NBR 14724:2011, ABNT NBR 6024:2012 e outras},
   Author                   = {abnTeX2 and Lauro C{\'e}sar Araujo},
   Organization             = {Equipe abnTeX2},
   Year                     = {2012},
@@ -147,9 +147,9 @@
 }
 
 @Book{ibge1993,
-  Title                    = {Normas de apresenta{\c c}{\~a}o tabular},
+  Title                    = {Normas de apresenta\c{c}{\~a}o tabular},
   Author                   = {IBGE},
-  Publisher                = {Centro de Documenta{\c c}{\~a}o e Dissemina{\c c}{\~a}o de Informa{\c c}{\~o}es. Funda{\c c}{\~a}o Intituto Brasileiro de Geografia e Estat{\'\i}stica},
+  Publisher                = {Centro de Documenta\c{c}{\~a}o e Dissemina\c{c}{\~a}o de Informa\c{c}{\~o}es. Funda\c{c}{\~a}o Intituto Brasileiro de Geografia e Estat{\'i}stica},
   Year                     = {1993},
 
   Address                  = {Rio de Janeiro},
@@ -176,18 +176,18 @@
 
 @Manual{abnt-classe-doc,
   Title                    = {Classe {ABNT}},
-  Author                   = {Santini Frasson, Miguel Vin{\'\i}cius},
+  Author                   = {Santini Frasson, Miguel Vin{\'i}cius},
   Organization             = {Grupo abnTeX},
   Year                     = {2002},
 
   Bdsk-url-1               = {http://abntex.codigolivre.org.br},
   Date-modified            = {2013-02-04 12:04:50 +0000},
-  Subtitle                 = {confec{\c c}{\~a}o de trabalhos acad{\^e}micos em {\LaTeX} segundo as normas {ABNT}},
+  Subtitle                 = {confec\c{c}{\~a}o de trabalhos acad{\^e}micos em {\LaTeX} segundo as normas {ABNT}},
   Url                      = {http://abntex.codigolivre.org.br}
 }
 
 @Manual{abnt-bibtex-alf-doc,
-  Title                    = {Estilo bibtex compat{\'\i}vel com a `norma' 6023/2000 da {ABNT}},
+  Title                    = {Estilo bibtex compat{\'i}vel com a `norma' 6023/2000 da {ABNT}},
 
   Address                  = {.},
   Author                   = {Gerald Weber},
@@ -195,12 +195,12 @@
   Year                     = {2003},
 
   Bdsk-url-1               = {http://abntex.codigolivre.org.br},
-  Subtitle                 = {Quest\~oes espec{\'\i}ficas da `norma' 10520/2001},
+  Subtitle                 = {Quest\~oes espec{\'i}ficas da `norma' 10520/2001},
   Url                      = {http://abntex.codigolivre.org.br}
 }
 
 @Manual{abnt-bibtex-doc,
-  Title                    = {Estilo bibtex compat{\'\i}vel com a `norma' 6023/2000 da {ABNT}},
+  Title                    = {Estilo bibtex compat{\'i}vel com a `norma' 6023/2000 da {ABNT}},
   Author                   = {Gerald Weber},
   Organization             = {Grupo abnTeX},
   Year                     = {2003},
@@ -210,7 +210,7 @@
 }
 
 @Manual{tabela-simbolos-doc,
-  Title                    = {Tabelas de s{\'\i}mbolos usando makeindex},
+  Title                    = {Tabelas de s{\'i}mbolos usando makeindex},
   Author                   = {Gerald Weber},
   Organization             = {Grupo abnTeX},
   Year                     = {2003},
@@ -239,14 +239,14 @@
 
   Address                  = {Rio de Janeiro},
   Month                    = feb,
-  Organization             = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
+  Organization             = {Associa\c{c}\~ao Brasileira de Normas T\'ecnicas},
   Year                     = {2012},
 
   Date-added               = {2013-03-18 13:32:00 +0000},
   Date-modified            = {2013-03-18 13:33:17 +0000},
   Org-short                = {ABNT},
   Pages                    = {4},
-  Subtitle                 = {Informa{\c c}\~ao e Documenta{\c c}\~ao - Numera{\c c}\~ao progressiva das se{\c c}\~oes de um documento - Apresenta{\c c}\~ao}
+  Subtitle                 = {Informa\c{c}\~ao e Documenta\c{c}\~ao - Numera\c{c}\~ao progressiva das se\c{c}\~oes de um documento - Apresenta\c{c}\~ao}
 }
 
 @Manual{NBR14724:2011,
@@ -254,14 +254,14 @@
 
   Address                  = {Rio de Janeiro},
   Month                    = mar,
-  Organization             = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
+  Organization             = {Associa\c{c}\~ao Brasileira de Normas T\'ecnicas},
   Year                     = {2011},
 
   Date-added               = {2013-03-18 14:19:32 +0000},
   Date-modified            = {2013-03-18 14:20:15 +0000},
   Org-short                = {ABNT},
   Pages                    = {15},
-  Subtitle                 = {Informa{\c c}\~ao e documenta{\c c}\~ao --- Trabalhos acad\^emicos --- Apresenta{\c c}\~ao}
+  Subtitle                 = {Informa\c{c}\~ao e documenta\c{c}\~ao --- Trabalhos acad\^emicos --- Apresenta\c{c}\~ao}
 }
 
 @Manual{DOI,
@@ -310,14 +310,14 @@
   Address                  = {Rio de Janeiro},
   Month                    = aug,
   Note                     = {Substitui a Ref.~\citeonline{NBR10520:2001}},
-  Organization             = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
+  Organization             = {Associa\c{c}\~ao Brasileira de Normas T\'ecnicas},
   Year                     = {2002},
 
   Date-added               = {2012-12-20 12:30:58 +0000},
   Date-modified            = {2012-12-20 12:30:58 +0000},
   Org-short                = {ABNT},
   Pages                    = {7},
-  Subtitle                 = {Informa{\c c}\~ao e documenta{\c c}\~ao --- Apresenta{\c c}\~ao de cita{\c c}\~oes em documentos}
+  Subtitle                 = {Informa\c{c}\~ao e documenta\c{c}\~ao --- Apresenta\c{c}\~ao de cita\c{c}\~oes em documentos}
 }
 
 @Manual{NBR14724:2002,
@@ -326,14 +326,14 @@
   Address                  = {Rio de Janeiro},
   Month                    = aug,
   Note                     = {Substitui a Ref.~\citeonline{NBR14724:2001}},
-  Organization             = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
+  Organization             = {Associa\c{c}\~ao Brasileira de Normas T\'ecnicas},
   Year                     = {2002},
 
   Date-added               = {2012-12-20 12:30:58 +0000},
   Date-modified            = {2012-12-20 12:30:58 +0000},
   Org-short                = {ABNT},
   Pages                    = {6},
-  Subtitle                 = {Informa{\c c}\~ao e documenta{\c c}\~ao --- trabalhos acad\^emicos --- apresenta{\c c}\~ao}
+  Subtitle                 = {Informa\c{c}\~ao e documenta\c{c}\~ao --- trabalhos acad\^emicos --- apresenta\c{c}\~ao}
 }
 
 @Manual{NBR6023:2002,
@@ -342,14 +342,14 @@
   Address                  = {Rio de Janeiro},
   Month                    = aug,
   Note                     = {Substitui a Ref.~\citeonline{NBR6023:2000}},
-  Organization             = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
+  Organization             = {Associa\c{c}\~ao Brasileira de Normas T\'ecnicas},
   Year                     = {2002},
 
   Date-added               = {2012-12-20 12:30:58 +0000},
   Date-modified            = {2012-12-20 12:30:58 +0000},
   Org-short                = {ABNT},
   Pages                    = {24},
-  Subtitle                 = {Informa{\c c}\~ao e documenta{\c c}\~ao --- Refer\^encias --- Elabora{\c c}\~ao}
+  Subtitle                 = {Informa\c{c}\~ao e documenta\c{c}\~ao --- Refer\^encias --- Elabora\c{c}\~ao}
 }
 
 @Manual{NBR6029:2002,
@@ -357,14 +357,14 @@
 
   Address                  = {Rio de Janeiro},
   Month                    = sep,
-  Organization             = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
+  Organization             = {Associa\c{c}\~ao Brasileira de Normas T\'ecnicas},
   Year                     = {2002},
 
   Date-added               = {2012-12-20 12:30:58 +0000},
   Date-modified            = {2012-12-20 12:30:58 +0000},
   Org-short                = {ABNT},
   Pages                    = {9},
-  Subtitle                 = {Informa{\c c}\~ao e documenta{\c c}\~ao --- Livros e folhetos --- Apresenta{\c c}\~ao}
+  Subtitle                 = {Informa\c{c}\~ao e documenta\c{c}\~ao --- Livros e folhetos --- Apresenta\c{c}\~ao}
 }
 
 @Manual{ISO15707:2001,
@@ -398,14 +398,14 @@
   Address                  = {Rio de Janeiro},
   Month                    = jul,
   Note                     = {Substitui a Ref.~\citeonline{NBR10520:1988}},
-  Organization             = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
+  Organization             = {Associa\c{c}\~ao Brasileira de Normas T\'ecnicas},
   Year                     = {2001},
 
   Date-added               = {2012-12-20 12:30:58 +0000},
   Date-modified            = {2012-12-20 12:30:58 +0000},
   Org-short                = {ABNT},
   Pages                    = {4},
-  Subtitle                 = {Informa{\c c}\~ao e documenta{\c c}\~ao --- Apresenta{\c c}\~ao de cita{\c c}\~oes em documentos}
+  Subtitle                 = {Informa\c{c}\~ao e documenta\c{c}\~ao --- Apresenta\c{c}\~ao de cita\c{c}\~oes em documentos}
 }
 
 @Manual{NBR14724:2001,
@@ -413,14 +413,14 @@
 
   Address                  = {Rio de Janeiro},
   Month                    = jul,
-  Organization             = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
+  Organization             = {Associa\c{c}\~ao Brasileira de Normas T\'ecnicas},
   Year                     = {2001},
 
   Date-added               = {2012-12-20 12:30:58 +0000},
   Date-modified            = {2012-12-20 12:30:58 +0000},
   Org-short                = {ABNT},
   Pages                    = {6},
-  Subtitle                 = {Informa{\c c}\~ao e documenta{\c c}\~ao --- trabalhos acad\^emicos --- apresenta{\c c}\~ao}
+  Subtitle                 = {Informa\c{c}\~ao e documenta\c{c}\~ao --- trabalhos acad\^emicos --- apresenta\c{c}\~ao}
 }
 
 @Manual{NBR6023:2000,
@@ -428,14 +428,14 @@
 
   Address                  = {Rio de Janeiro},
   Month                    = aug,
-  Organization             = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
+  Organization             = {Associa\c{c}\~ao Brasileira de Normas T\'ecnicas},
   Year                     = {2000},
 
   Date-added               = {2012-12-20 12:30:58 +0000},
   Date-modified            = {2012-12-20 12:30:58 +0000},
   Org-short                = {ABNT},
   Pages                    = {22},
-  Subtitle                 = {Informa{\c c}\~ao e documenta{\c c}\~ao --- Refer\^encias --- Elabora{\c c}\~ao}
+  Subtitle                 = {Informa\c{c}\~ao e documenta\c{c}\~ao --- Refer\^encias --- Elabora\c{c}\~ao}
 }
 
 @Manual{ISO11798:1999,
@@ -573,14 +573,14 @@
 
   Address                  = {Rio de Janeiro},
   Month                    = oct,
-  Organization             = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
+  Organization             = {Associa\c{c}\~ao Brasileira de Normas T\'ecnicas},
   Year                     = {1994},
 
   Date-added               = {2012-12-20 12:30:58 +0000},
   Date-modified            = {2012-12-20 12:30:58 +0000},
   Org-short                = {ABNT},
   Pages                    = {3},
-  Subtitle                 = {Apresenta{\c c}\~ao de peri\'odicos}
+  Subtitle                 = {Apresenta\c{c}\~ao de peri\'odicos}
 }
 
 @Manual{NBR6022:1994,
@@ -588,14 +588,14 @@
 
   Address                  = {Rio de Janeiro},
   Month                    = aug,
-  Organization             = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
+  Organization             = {Associa\c{c}\~ao Brasileira de Normas T\'ecnicas},
   Year                     = {1994},
 
   Date-added               = {2012-12-20 12:30:58 +0000},
   Date-modified            = {2012-12-20 12:30:58 +0000},
   Org-short                = {ABNT},
   Pages                    = {2},
-  Subtitle                 = {Apresenta{\c c}\~ao de artigos em publica{\c c}\~oes peri\'odicos}
+  Subtitle                 = {Apresenta\c{c}\~ao de artigos em publica\c{c}\~oes peri\'odicos}
 }
 
 @Manual{NBR6026:1994,
@@ -603,7 +603,7 @@
 
   Address                  = {Rio de Janeiro},
   Month                    = mar,
-  Organization             = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
+  Organization             = {Associa\c{c}\~ao Brasileira de Normas T\'ecnicas},
   Year                     = {1994},
 
   Date-added               = {2012-12-20 12:30:58 +0000},
@@ -642,10 +642,10 @@
 }
 
 @Manual{NBR12256:1992,
-  Title                    = {Apresenta{\c c}\~ao de originais},
+  Title                    = {Apresenta\c{c}\~ao de originais},
   Address                  = {Rio de Janeiro},
   Month                    = apr,
-  Organization             = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
+  Organization             = {Associa\c{c}\~ao Brasileira de Normas T\'ecnicas},
   Year                     = {1992},
 
   Date-added               = {2012-12-20 12:30:58 +0000},
@@ -658,7 +658,7 @@
   Title                    = {{NBR} 6028},
   Address                  = {Rio de Janeiro},
   Month                    = may,
-  Organization             = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
+  Organization             = {Associa\c{c}\~ao Brasileira de Normas T\'ecnicas},
   Year                     = {1990},
   Date-added               = {2012-12-20 12:30:58 +0000},
   Date-modified            = {2012-12-20 12:30:58 +0000},
@@ -668,11 +668,11 @@
 }
 
 @Manual{NBR10719:1989,
-  Title                    = {Apresenta{\c c}\~ao de relat\'orios t\'ecnico-cient{\'\i}ficos},
+  Title                    = {Apresenta\c{c}\~ao de relat\'orios t\'ecnico-cient{\'i}ficos},
 
   Address                  = {Rio de Janeiro},
   Month                    = aug,
-  Organization             = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
+  Organization             = {Associa\c{c}\~ao Brasileira de Normas T\'ecnicas},
   Year                     = {1989},
 
   Date-added               = {2012-12-20 12:30:58 +0000},
@@ -686,14 +686,14 @@
 
   Address                  = {Rio de Janeiro},
   Month                    = aug,
-  Organization             = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
+  Organization             = {Associa\c{c}\~ao Brasileira de Normas T\'ecnicas},
   Year                     = {1989},
 
   Date-added               = {2012-12-20 12:30:58 +0000},
   Date-modified            = {2012-12-20 12:30:58 +0000},
   Org-short                = {ABNT},
   Pages                    = {2},
-  Subtitle                 = {Numera{\c c}\~ao progressiva das se{\c c}\~oes de um documento}
+  Subtitle                 = {Numera\c{c}\~ao progressiva das se\c{c}\~oes de um documento}
 }
 
 @Manual{NBR6025:2002,
@@ -701,14 +701,14 @@
 
   Address                  = {Rio de Janeiro},
   Month                    = {set},
-  Organization             = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
+  Organization             = {Associa\c{c}\~ao Brasileira de Normas T\'ecnicas},
   Year                     = {1989},
 
   Date-added               = {2012-12-20 12:30:58 +0000},
   Date-modified            = {2012-12-20 12:30:58 +0000},
   Org-short                = {ABNT},
   Pages                    = {6},
-  Subtitle                 = {Informa{\c c}\~ao e documenta{\c c}\~ao --- Revis\~ao de originais e provas}
+  Subtitle                 = {Informa\c{c}\~ao e documenta\c{c}\~ao --- Revis\~ao de originais e provas}
 }
 
 @Manual{NBR6027:1989,
@@ -716,7 +716,7 @@
 
   Address                  = {Rio de Janeiro},
   Month                    = aug,
-  Organization             = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
+  Organization             = {Associa\c{c}\~ao Brasileira de Normas T\'ecnicas},
   Year                     = {1989},
 
   Date-added               = {2012-12-20 12:30:58 +0000},
@@ -731,14 +731,14 @@
 
   Address                  = {Rio de Janeiro},
   Month                    = aug,
-  Organization             = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
+  Organization             = {Associa\c{c}\~ao Brasileira de Normas T\'ecnicas},
   Year                     = {1989},
 
   Date-added               = {2012-12-20 12:30:58 +0000},
   Date-modified            = {2012-12-20 12:30:58 +0000},
   Org-short                = {ABNT},
   Pages                    = {14},
-  Subtitle                 = {Abrevia{\c c}\~oes de T{\'\i}tulos de peri\'odicos e publica{\c c}\~oes seriadas}
+  Subtitle                 = {Abrevia\c{c}\~oes de T{\'i}tulos de peri\'odicos e publica\c{c}\~oes seriadas}
 }
 
 @Manual{NBR6033:1989,
@@ -746,7 +746,7 @@
 
   Address                  = {Rio de Janeiro},
   Month                    = aug,
-  Organization             = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
+  Organization             = {Associa\c{c}\~ao Brasileira de Normas T\'ecnicas},
   Year                     = {1989},
 
   Date-added               = {2012-12-20 12:30:58 +0000},
@@ -761,14 +761,14 @@
 
   Address                  = {Rio de Janeiro},
   Month                    = aug,
-  Organization             = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
+  Organization             = {Associa\c{c}\~ao Brasileira de Normas T\'ecnicas},
   Year                     = {1989},
 
   Date-added               = {2012-12-20 12:30:58 +0000},
   Date-modified            = {2012-12-20 12:30:58 +0000},
   Org-short                = {ABNT},
   Pages                    = {3},
-  Subtitle                 = {Prepara{\c c}{\~a}o de {\'\i}ndice de publica{\c c}{\~o}es}
+  Subtitle                 = {Prepara\c{c}{\~a}o de {\'i}ndice de publica\c{c}{\~o}es}
 }
 
 @Manual{NBR10520:1988,
@@ -776,14 +776,14 @@
 
   Address                  = {Rio de Janeiro},
   Month                    = oct,
-  Organization             = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
+  Organization             = {Associa\c{c}\~ao Brasileira de Normas T\'ecnicas},
   Year                     = {1988},
 
   Date-added               = {2012-12-20 12:30:58 +0000},
   Date-modified            = {2012-12-20 12:30:58 +0000},
   Org-short                = {ABNT},
   Pages                    = {3},
-  Subtitle                 = {Apresenta{\c c}\~ao de cita{\c c}\~oes em documentos --- Procedimentos}
+  Subtitle                 = {Apresenta\c{c}\~ao de cita\c{c}\~oes em documentos --- Procedimentos}
 }
 
 @Manual{NBR10522:1988,
@@ -791,14 +791,14 @@
 
   Address                  = {Rio de Janeiro},
   Month                    = oct,
-  Organization             = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
+  Organization             = {Associa\c{c}\~ao Brasileira de Normas T\'ecnicas},
   Year                     = {1988},
 
   Date-added               = {2012-12-20 12:30:58 +0000},
   Date-modified            = {2012-12-20 12:30:58 +0000},
   Org-short                = {ABNT},
   Pages                    = {9},
-  Subtitle                 = {Abrevi{\c c}\~ao na descri{\c c}\~ao bibliogr\'afica}
+  Subtitle                 = {Abrevi\c{c}\~ao na descri\c{c}\~ao bibliogr\'afica}
 }
 
 @Manual{NBR10523:1988,
@@ -806,14 +806,14 @@
 
   Address                  = {Rio de Janeiro},
   Month                    = oct,
-  Organization             = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
+  Organization             = {Associa\c{c}\~ao Brasileira de Normas T\'ecnicas},
   Year                     = {1988},
 
   Date-added               = {2012-12-20 12:30:58 +0000},
   Date-modified            = {2012-12-20 12:30:58 +0000},
   Org-short                = {ABNT},
   Pages                    = {5},
-  Subtitle                 = {Entrada para nomes de l{\'\i}ngua portuguesa em registros bibliogr\'aficos}
+  Subtitle                 = {Entrada para nomes de l{\'i}ngua portuguesa em registros bibliogr\'aficos}
 }
 
 @Manual{ISO690:1987,
@@ -900,7 +900,7 @@
   Title                    = {{NBR} 6028},
 
   Address                  = {Rio de Janeiro},
-  Organization             = {Associa{\c c}\~ao Brasileira de Normas T\'ecnicas},
+  Organization             = {Associa\c{c}\~ao Brasileira de Normas T\'ecnicas},
   Year                     = {1980},
 
   Date-added               = {2012-12-20 12:30:58 +0000},
