colocadas algumas keywords para exemplificar
keywords ={consultada} , na bibkey = ISO214:1976editada
keywords ={npub-informal} , na bibkey = luminaria01,

--- a/referencias.bib
+++ b/referencias.bib
@@ -924,19 +924,31 @@
   Title                    = {{ISO} 214:1976},
   Organization             = {International Standards Organization},
   Year                     = {1976},
-
-  Date-added               = {2012-12-20 12:30:58 +0000},
+   Date-added               = {2012-12-20 12:30:58 +0000},
   Date-modified            = {2012-12-20 12:30:58 +0000},
   Org-short                = {ISO},
   Subtitle                 = {Documentation --- {A}bstracts for publications and documentation}
 }
 
 
+
+@Manual{ISO214:1976editada,
+  Title                    = {{ISO} 214:1976},
+  Organization             = {International Standards Organization},
+  Year                     = {1976},
+  keywords                 = {consultada} ,
+  Date-added               = {2012-12-20 12:30:58 +0000},
+  Date-modified            = {2012-12-20 12:30:58 +0000},
+  Org-short                = {ISO},
+  Subtitle                 = {Documentation --- {A}bstracts for publications and documentation}
+}
+
 @Misc{luminaria01,
 title={Candeeiros de tecto},
 author={euzinha ué},
 address={aqui né},
 year={2017},
+keywords={npub-informal},
 url={https://goo.gl/DhofqW},
 urlaccessdate={2009-01-31},
 }
