Referencias não incluem obras consultadas, não publicadas e informais
\printbibliography[heading=bay,notkeyword= {consulta}, notkeyword={npub-informal}]

--- a/main.tex
+++ b/main.tex
@@ -154,7 +154,7 @@
 
 \begingroup
 
-\printbibliography[heading=bay,notkeyword= consulta]
+\printbibliography[heading=bay,notkeyword= {consulta}, notkeyword={npub-informal}]
   
 \printbibliography [keyword= consulta, title = FONTES DE CONSULTA]
 \endgroup
