pacote para listagem e simplificar citação
\usepackage {listings}

\citenp{]               sitação no final da frase,  e colocação da referência na nota de rodapé
\textcitenp{}         sitação no meio da frase,  e colocação da referência na nota de rodapé

--- a/00-pacotes.tex
+++ b/00-pacotes.tex
@@ -161,3 +161,18 @@
 \DeclareMathOperator{\tgh}{tgh}
 \DeclareMathOperator{\cossec}{cossec}
 %\DeclareMathOperator{\sen}{sen}
+
+% Para fazer a listagem de codigos LaTeX na documentação
+% ----------------------------------------------------------
+\usepackage{listings}
+
+%Comando para fazer 
+%    a citação de documentos não publicados e informais e 
+%    colocar as referências nas notas de rodapé
+% ----------------------------------------------------------
+
+\newcommand{\citenp}[1]{
+\cite{#1}\footnote{\fullcite{#1}}}
+
+\newcommand{\textcitenp}[1]{
+	\textcite{#1}\footnote{\fullcite{#1}}}
